@@ -1,5 +1,12 @@
 2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
 
+	* src/universal-cp/event-treeview.c:
+
+	Show the full value in a tooltip when the mouse hovers on an event
+	treeview row.
+
+2007-11-05  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
+
 	* src/universal-cp/details-treeview.c:
 	* src/universal-cp/details-treeview.h:
 	* src/universal-cp/device-treeview.c:
